<resources>
    <string name="app_name">Tinni</string>
    <string name="home">Home</string>
    <string name="programs">Programs</string>
    <string name="sounds">Sounds</string>
    <string name="stats">Stats</string>
    <string name="search_sounds">Explore sounds</string>
    <string name="search_sounds_sub">Explore a database of various sounds for you to listen or upload your own.</string>
    <string name="explore_programs">Individual programs</string>
    <string name="explore_programs_sub">Explore a database of individual programs or upload your own.</string>
    <string name="program">Program</string>
    <string name="loading">Loading</string>
    <string name="nature">Nature</string>
    <string name="white_noise">White noise</string>
    <string name="calm">Calm</string>
    <string name="urban">Urban</string>
    <string name="favorites">My Favorites</string>
    <string name="loud">Loud</string>
    <string name="quiet">Quiet</string>
    <string name="exciting">Exciting</string>
    <string name="long_duration">Long duration</string>
    <string name="short_duration">Short duration</string>
    <string name="melodic">Melodic</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>
    <string name="times_listened">Listened %1$d times</string>
    <string name="upload_text">Please select your desired audio file</string>
    <string name="next">Next step</string>
    <string name="play">Play</string>
    <string name="player_default_value">00:00</string>
    <string name="upload">Upload</string>
    <string name="upload_sound">Upload sound</string>
    <string name="error_simple">Something went wrong. Please try again</string>
    <string name="error_write_permission">Unfortunately, we cannot access the file without this authorization</string>
    <string name="error_filetype">Please select an audio file</string>
    <string name="error_filetype_image">Please select an image file</string>
    <string name="error_title">Please enter a title</string>
    <string name="error_text">Please enter a text</string>
    <string name="error_category">Please select at least one category</string>
    <string name="error_file">Wrong file type! Allowed types: %1$s</string>
    <string name="error_questions">Please answer every question!</string>
    <string name="error_rating">Please rate your experience!</string>
    <string name="error_program">You have not yet completed your current program. When you start this program, the program you started will be canceled. Start anyway?</string>
    <string name="error_session">Please enter at least one session</string>
    <string name="error_no_questions">Please enter at least one question</string>
    <string name="error_no_answers">Please enter at least one answer</string>
    <string name="error_interval">The session interval must be at least one day</string>
    <string name="error_code">Please enter the JSON code into the text field</string>
    <string name="error_import">The program could not be imported. Please check the JSON code</string>
    <string name="error_no_ratings">You have not yet tracked a day. Tracking can be done on the home page!</string>
    <string name="error_no_completed_programs">You have not yet completed a program!</string>
    <string name="error_headphone">Use headphones for a higher quality listening experience</string>
    <string name="error_pdf">You have not installed an app that can display the PDF</string>
    <string name="error_listened">There is no history for this sound yet</string>
    <string name="error_history">You have not yet completed this program</string>
    <string name="error_ratings">You have not rated your days yet</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="clear">Clear</string>
    <string name="categories">Categories</string>
    <string name="description">Description</string>
    <string name="add_picture">Add picture</string>
    <string name="picture">Picture</string>
    <string name="my_sounds">My Sounds</string>
    <string name="add_success">Sound has been uploaded successfully</string>
    <string name="add_program_success">Program has been added successfully</string>
    <string name="nothing_in_category">Es konnten keine Sounds mit dieser Kombination von Kategorien gefunden werden</string>
    <string name="show_all_sounds">Show all sounds</string>
    <string name="minutes_short">%s Min</string>
    <string name="minutes_long">%s minutes</string>
    <string name="rewind">Rewind 10 seconds</string>
    <string name="forward">Fast forward 10 seconds</string>
    <string name="volume">Volume</string>
    <string name="details">Details</string>
    <string name="favorite">Favorite</string>
    <string name="showMore">Show more</string>
    <string name="showLess">Show less</string>
    <string name="actions">Actions</string>
    <string name="goUp">To the top</string>
    <string name="added_to_favorites">Added to your favorites</string>
    <string name="removed_from_favorites">Removed from your favorites</string>
    <string name="wait">Please wait a few seconds</string>
    <string name="sound_playing">%1$s is playing</string>
    <string name="error_play">The sound could not be played. Please try again</string>
    <string name="repeat">Repeat</string>
    <string name="session">Session</string>
    <string name="sounds_count">%1$d Sessions</string>
    <string name="sessions_count">Sessions (%1$d)</string>
    <string name="session_number">Sitzung %1$d</string>
    <string name="session_text">%1$s · %2$s</string>
    <string name="session_text_long">%1$s · %2$s · Completed</string>
    <string name="session_text_progress">%1$s · %2$s · %3$s</string>
    <string name="sessions_count_no_brackets">%1$d sessions</string>
    <string name="session_x_of_y">Session %1$d of %2$s</string>
    <string name="daily">Daily</string>
    <string name="more_days">Every %1$d days</string>
    <string name="second">Second</string>
    <string name="seconds">Seconds</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="year">Year</string>
    <string name="years">Year</string>
    <string name="total_time">total of %1$s</string>
    <string name="short_time">short</string>
    <string name="program_text">%1$s · %2$s, %3$s</string>
    <string name="start_program">Start program</string>
    <string name="end_program">End program</string>
    <string name="questionnaire">Questionnaire (%1$d)</string>
    <string name="questionnaire_sub">Before you start your program, we need your answers for this questionnaire to record your progress</string>
    <string name="questionnaire_end_sub">You have successfully completed the program! Please answer the following questionnaire again to analyze your progress</string>
    <string name="text_with_number">%1$d. %2$s</string>
    <string name="select">Select</string>
    <string name="multiple_select">Multiple selection possible</string>
    <string name="save_selection">Save selection</string>
    <string name="save">Save</string>
    <string name="start_session_x">Start session %1$d</string>
    <string name="next_session">Next session</string>
    <string name="next_session_sub">You are doing very well so far! Now it is important to stay on the ball to improve your symptoms</string>
    <string name="session_rating">How did you like the session?</string>
    <string name="add_sessions">Sessions hinzufügen</string>
    <string name="add_sessions_sub">Select sounds you want to play in your program. A session contains exactly one sound and its playback time</string>
    <string name="session_length">How long should this session be?</string>
    <string name="selected_sessions">Selected sessions (%1$d)</string>
    <string name="session_deleted">Session has been deleted</string>
    <string name="sessions_help">Tap to delete, hold to move</string>
    <string name="session_interval">Session interval</string>
    <string name="good_job">Good job!</string>
    <string name="good_job_sub">You have successfully completed the session. Please take a moment to evaluate the session</string>
    <string name="very_good">Very good</string>
    <string name="good">Good</string>
    <string name="neutral">Neutral</string>
    <string name="less_good">Less good</string>
    <string name="bad">Bad</string>
    <string name="miserable">Miserable</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_sub">You have successfully completed the current program. Hopefully it could help to improve your symptoms</string>
    <string name="close">Close</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="current_program">Current program</string>
    <string name="delete">Delete</string>
    <string name="delete_success">You have successfully removed your sound</string>
    <string name="delete_program_success">You have successfully removed your program</string>
    <string name="delete_verification">Do you really want to delete this sound? It will also be removed from every (completed) program!</string>
    <string name="delete_session_verification">Do you really want to delete this session?</string>
    <string name="delete_answer_verification">Do you really want to delete this answer?</string>
    <string name="delete_program_verification">Do you really want to delete this program?</string>
    <string name="create_own_program">Create my own program</string>
    <string name="create_program">Create program</string>
    <string name="add">Add</string>
    <string name="question">Question</string>
    <string name="add_question">Add question</string>
    <string name="edit_question">Edit question</string>
    <string name="add_question_sub">You can create as many answers to your question as you need, which must be answered before and after completing your program</string>
    <string name="multiple_choice">Multiple choice possible?</string>
    <string name="answers">Answers (%1$d)</string>
    <string name="answer">Answer</string>
    <string name="add_answer">Add answer</string>
    <string name="add_answer_sub">Make sure that your answer answers the question precisely and is easy to understand so that no misunderstandings can arise</string>
    <string name="text">Text</string>
    <string name="answer_deleted">Answer has been deleted</string>
    <string name="question_added">Question has been added</string>
    <string name="question_edited">Question has been edited</string>
    <string name="answer_added">Answer has been added</string>
    <string name="export_program">Export program</string>
    <string name="import_program">Import program</string>
    <string name="export_text">There is now a JSON code in your clipboard that you can send to the person concerned. Your program can then be imported by pasting it in the corresponding form inside the app.\n\nNote: Custom Sounds will not be imported!</string>
    <string name="got_it">Got it</string>
    <string name="import_text">Paste the JSON code that you have received here. If the code is valid, the program will be added immediately.</string>
    <string name="how_do_you_feel">How do you feel today?</string>
    <string name="how_do_you_feel_sub">In order to be able to better record your course of the tinnitus, you can indicate in a personal note how feel today</string>
    <string name="personal_note">Personal note</string>
    <string name="personal_note_sub">Here you have the option to add a personal note to the sound that only you can see</string>
</resources>