<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.tinni.ui.program.ProgramViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/primary_to_primary_light_to_primary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/defaultMargin"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_session"
                style="@style/Heading" />
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/next_session_sub"
                style="@style/SubHeading" />
            <LinearLayout
                android:id="@+id/sessionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                android:gravity="center_vertical"
                android:padding="@dimen/mediumMargin"
                android:background="@drawable/edittext_primary_dark_transparent_light">
                <ImageView
                    android:id="@+id/sessionImg"
                    android:layout_width="@dimen/playSmallSize"
                    android:layout_height="@dimen/playSmallSize"
                    android:layout_weight="0"
                    android:background="@drawable/circle_primary_dark"
                    android:contentDescription="@string/session"
                    android:layout_marginEnd="@dimen/defaultMargin" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/sessionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/SmallHeading" />
                    <TextView
                        android:id="@+id/sessionDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tinyMargin"
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/SubHeading" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/calendar"
                    android:layout_width="@dimen/playSmallSize"
                    android:layout_height="@dimen/playSmallSize"
                    android:background="@drawable/circle_accent_ripple"
                    android:src="@drawable/calendar"
                    android:layout_weight="0"
                    android:padding="@dimen/mediumMargin"
                    android:contentDescription="@string/add_to_calendar"
                    android:tint="@color/colorLight" />
            </LinearLayout>
            <Button
                android:id="@+id/close"
                style="@style/Button"
                android:layout_gravity="bottom|center"
                android:text="@string/close"
                android:background="@drawable/rounded_accent"
                android:layout_margin="@dimen/defaultMargin" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>